--- a/src/style.css
+++ b/src/style.css
@@ -223,7 +223,7 @@
 	font-size:20px;
 	font-weight:bold;
 	padding:15px 35px;
-    /* margin: 40px 0px; */
+    margin: 5px 0px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #747474;
     box-sizing: border-box;
