--- a/src/style.css
+++ b/src/style.css
@@ -142,6 +142,7 @@
     justify-content: space-evenly;
     align-items: center;
     padding-top: 50px;
+    padding-bottom: 20px;
 
     animation: fadein 2s forwards;
     opacity: 0;
